# k3b-trinity

./: CMakeL10n.txt  CMakeLists.txt  ChangeLog  ConfigureChecks.cmake  FAQ  Makefile.am  RELEASE_HOWTO  acinclude.m4  config.h.cmake  config.h.in  configure.in  configure.in.in  k3b.lsm  subdirs
k3bsetup/: CMakeL10n.txt  CMakeLists.txt  Makefile.am  base_k3bsetup2.ui  k3bsetup  k3bsetup2.cpp  k3bsetup2.desktop  k3bsetup2.h
libk3b/: CMakeL10n.txt  CMakeLists.txt  Makefile.am  k3bimage.xsd
libk3b/cddb/: CMakeLists.txt  k3bcddb.cpp  k3bcddb.h  k3bcddbhttpquery.cpp  k3bcddbhttpquery.h  k3bcddblocalquery.cpp  k3bcddblocalquery.h  k3bcddblocalsubmit.cpp  k3bcddblocalsubmit.h  k3bcddbmultientriesdialog.cpp  k3bcddbmultientriesdialog.h  k3bcddbpquery.cpp  k3bcddbpquery.h  k3bcddbquery.cpp  k3bcddbquery.h  k3bcddbresult.h  k3bcddbsubmit.cpp  k3bcddbsubmit.h
libk3b/core/: CMakeLists.txt  Makefile.am  k3b_export.h  k3bcore.cpp  k3bcore.h  k3bdataevent.h  k3bdefaultexternalprograms.cpp  k3bdefaultexternalprograms.h  k3bexternalbinmanager.cpp  k3bexternalbinmanager.h  k3bglobals.cpp  k3bglobals.h  k3bglobalsettings.cpp  k3bglobalsettings.h  k3bjob.cpp  k3bjob.h  k3bjobhandler.h  k3bprocess.cpp  k3bprocess.h  k3bprogressinfoevent.h  k3bsimplejobhandler.cpp  k3bsimplejobhandler.h  k3bthread.cpp  k3bthread.h  k3bthreadjob.cpp  k3bthreadjob.h  k3bversion.cpp  k3bversion.h
libk3b/jobs/: CMakeLists.txt  k3baudiocuefilewritingjob.cpp  k3baudiocuefilewritingjob.h  k3baudiosessionreadingjob.cpp  k3baudiosessionreadingjob.h  k3bbinimagewritingjob.cpp  k3bbinimagewritingjob.h  k3bblankingjob.cpp  k3bblankingjob.h  k3bcdcopyjob.cpp  k3bcdcopyjob.h  k3bcdda2wavreader.cpp  k3bcdda2wavreader.h  k3bclonejob.cpp  k3bclonejob.h  k3bclonetocreader.cpp  k3bclonetocreader.h  k3bdatatrackreader.cpp  k3bdatatrackreader.h  k3bdvdcopyjob.cpp  k3bdvdcopyjob.h  k3bdvdformattingjob.cpp  k3bdvdformattingjob.h  k3breadcdreader.cpp  k3breadcdreader.h  k3bverificationjob.cpp  k3bverificationjob.h  k3bvideodvdtitledetectclippingjob.cpp  k3bvideodvdtitledetectclippingjob.h  k3bvideodvdtitletranscodingjob.cpp  k3bvideodvdtitletranscodingjob.h
libk3b/plugin/: CMakeLists.txt  k3baudiodecoder.cpp  k3baudiodecoder.h  k3baudioencoder.cpp  k3baudioencoder.h  k3baudiooutputplugin.h  k3baudioserver.cpp  k3baudioserver.h  k3bplugin.cpp  k3bplugin.h  k3bpluginconfigwidget.cpp  k3bpluginconfigwidget.h  k3bpluginfactory.cpp  k3bpluginfactory.h  k3bpluginmanager.cpp  k3bpluginmanager.h  k3bprojectplugin.h
libk3b/projects/: CMakeLists.txt  k3babstractwriter.cpp  k3babstractwriter.h  k3bcdrdaowriter.cpp  k3bcdrdaowriter.h  k3bcdrecordwriter.cpp  k3bcdrecordwriter.h  k3bcuefileparser.cpp  k3bcuefileparser.h  k3bdoc.cpp  k3bdoc.h  k3bdvdrecordwriter.cpp  k3bdvdrecordwriter.h  k3bgrowisofshandler.cpp  k3bgrowisofshandler.h  k3bgrowisofswriter.cpp  k3bgrowisofswriter.h  k3bimagefilereader.cpp  k3bimagefilereader.h  k3binffilewriter.cpp  k3binffilewriter.h  k3bpipebuffer.cpp  k3bpipebuffer.h  k3btocfilewriter.cpp  k3btocfilewriter.h
libk3b/scripts/: CMakeLists.txt
libk3b/tools/: CMakeLists.txt  k3bactivepipe.cpp  k3bactivepipe.h  k3bbusywidget.cpp  k3bbusywidget.h  k3bcdparanoialib.cpp  k3bcdparanoialib.h  k3bcdtextvalidator.cpp  k3bcdtextvalidator.h  k3bchecksumpipe.cpp  k3bchecksumpipe.h  k3bcutcombobox.cpp  k3bcutcombobox.h  k3bdevicecombobox.cpp  k3bdevicecombobox.h  k3bdevicehandler.cpp  k3bdevicehandler.h  k3bdeviceselectiondialog.cpp  k3bdeviceselectiondialog.h  k3bdirsizejob.cpp  k3bdirsizejob.h  k3bexceptions.cpp  k3bfilesplitter.cpp  k3bfilesplitter.h  k3bfilesysteminfo.cpp  k3bfilesysteminfo.h  k3bintmapcombobox.cpp  k3bintmapcombobox.h  k3bintvalidator.cpp  k3bintvalidator.h  k3biso9660.cpp  k3biso9660.h  k3biso9660backend.cpp  k3biso9660backend.h  k3blibdvdcss.cpp  k3blistview.cpp  k3blistview.h  k3blistviewitemanimator.cpp  k3blistviewitemanimator.h  k3bmd5job.cpp  (+37 more)
libk3b/videodvd/: CMakeLists.txt  configure.in.in  k3bvideodvd.cpp  k3bvideodvd.h  k3bvideodvdaudiostream.h  k3bvideodvdsubpicturestream.h  k3bvideodvdtime.cpp  k3bvideodvdtime.h  k3bvideodvdtitle.h
libk3bdevice/: CMakeL10n.txt  CMakeLists.txt  Makefile.am  configure.in.bot  configure.in.in  k3bcdtext.cpp  k3bcdtext.h  k3bconnection.cpp  k3bconnection.h  k3bcrc.cpp  k3bcrc.h  k3bdebug.cpp  k3bdebug.h  k3bdevice.cpp  k3bdevice.h  k3bdevice_export.h  k3bdevice_mmc.cpp  k3bdeviceglobals.cpp  k3bdeviceglobals.h  k3bdevicemanager.cpp  k3bdevicemanager.h  k3bdiskinfo.cpp  k3bdiskinfo.h  k3bhalconnection.cpp  k3bhalconnection.h  k3bmmc.h  k3bmsf.cpp  k3bmsf.h  k3bscsicommand.cpp  k3bscsicommand.h  k3bscsicommand_bsd.cpp  k3btoc.cpp  k3btoc.h  k3btrack.h
plugins/decoder/: CMakeLists.txt  skeleton.cpp  skeleton.h  skeleton.plugin
plugins/encoder/: CMakeLists.txt  skeleton.cpp  skeleton.h  skeleton.plugin
src/: CMakeL10n.txt  CMakeLists.txt  Makefile.am  k3b-cue.desktop  k3b-iso.desktop  k3b.cpp  k3b.desktop  k3b.h  k3bappdevicemanager.cpp  k3bappdevicemanager.h  k3bapplication.cpp  k3bapplication.h  k3baudioplayer.cpp  k3baudioplayer.h  k3baudioprojectinterface.cpp  k3baudioprojectinterface.h  k3bburnprogressdialog.cpp  k3bburnprogressdialog.h  k3bcontentsview.cpp  k3bcontentsview.h  k3bdatamodewidget.cpp  k3bdatamodewidget.h  k3bdataprojectinterface.cpp  k3bdataprojectinterface.h  k3bdebuggingoutputdialog.cpp  k3bdebuggingoutputdialog.h  k3bdebuggingoutputfile.cpp  k3bdebuggingoutputfile.h  k3bdiroperator.cpp  k3bdiroperator.h  k3bdirview.cpp  k3bdirview.h  k3bdiskinfoview.cpp  k3bdiskinfoview.h  k3bemptydiscwaiter.cpp  k3bemptydiscwaiter.h  k3bfiletreecombobox.cpp  k3bfiletreecombobox.h  k3bfiletreeview.cpp  k3bfiletreeview.h  (+77 more)
src/fastscale/: CMakeLists.txt  Makefile.am  configure.in.in  scale.cpp  scale.h
src/icons/: CMakeLists.txt
src/konqi/: CMakeLists.txt  k3b_audiocd_rip.desktop  k3b_cd_copy.desktop  k3b_create_audio_cd.desktop  k3b_create_data_cd.desktop  k3b_create_data_dvd.desktop  k3b_create_video_cd.desktop  k3b_dvd_copy.desktop  k3b_handle_empty_cd.desktop  k3b_handle_empty_dvd.desktop  k3b_videodvd_rip.desktop  k3b_write_bin_image.desktop  (+1 more)
(+575 files in other folders)
