#################################################
#
#  (C) 2016 Golubev Alexander
#  fatzer2 (AT) gmail.com
#
#  Improvements and feedback are welcome
#
#  This file is released under GPL >= 2
#
#################################################

install( PROGRAMS k3b_automount
  DESTINATION ${BIN_INSTALL_DIR}
  PERMISSIONS 4755
)
